cmake_minimum_required(VERSION 3.12)

project(external_libs)

function(register_external_lib SUB_PROJ_NAME)
	message("Processing external library '${SUB_PROJ_NAME}'...")
	add_subdirectory(${SUB_PROJ_NAME})

	set(SOLUTION_DIR_NAME external_libs)
	set(ARGV ${ARGN})
	list(LENGTH ARGV ARGC)
	if(${ARGC} GREATER 0)
		list(GET ARGV 0 SOLUTION_DIR_NAME)
	endif()

	set_target_properties(${SUB_PROJ_NAME} PROPERTIES FOLDER ${SOLUTION_DIR_NAME})
endfunction(register_external_lib)

register_external_lib(alsoundsystem)
register_external_lib(datasystem)
register_external_lib(iglfw)
register_external_lib(luasystem)
register_external_lib(materialsystem)
register_external_lib(mathutil)
register_external_lib(networkmanager)
register_external_lib(prosper)
register_external_lib(sharedutils)
register_external_lib(util_bsp external_libs/util)
register_external_lib(util_fgd external_libs/util)
register_external_lib(util_mmd external_libs/util)
register_external_lib(util_pad external_libs/util)
register_external_lib(util_archive external_libs/util)
register_external_lib(util_pragma_doc external_libs/util)
register_external_lib(util_sound external_libs/util)
register_external_lib(util_source_script external_libs/util)
register_external_lib(util_timeline_scene external_libs/util)
register_external_lib(util_versioned_archive external_libs/util)
register_external_lib(util_vmf external_libs/util)
register_external_lib(util_zip external_libs/util)
register_external_lib(util_image external_libs/util)
register_external_lib(util_dmx external_libs/util)
register_external_lib(util_smdmodel external_libs/util)
register_external_lib(util_pcl external_libs/util)
register_external_lib(util_formatted_text external_libs/util)
register_external_lib(vfilesystem)
register_external_lib(wgui)

message("Processing external library 'sharedutils-static'...")
add_subdirectory(sharedutils-static)
set_target_properties(sharedutils-static PROPERTIES FOLDER external_libs)

set_target_properties(networkmanager PROPERTIES FOLDER external_libs/networkmanager)
set_target_properties(clientmanager PROPERTIES FOLDER external_libs/networkmanager)
set_target_properties(servermanager PROPERTIES FOLDER external_libs/networkmanager)

set_target_properties(materialsystem PROPERTIES FOLDER external_libs/materialsystem)
set_target_properties(cmaterialsystem PROPERTIES FOLDER external_libs/materialsystem)

set(CMAKE_CXX_STANDARD 17)
