cmake_minimum_required(VERSION 3.12)

project(modules)

function(register_module MODULE_NAME)
	message("Processing module '${MODULE_NAME}'...")
	add_subdirectory(${MODULE_NAME})
endfunction(register_module)

# TODO: Just register all child directories in this directory as modules
register_module(interfaces)
register_module(pr_steamworks)
register_module(pr_chromium)
register_module(pr_curl)
register_module(pr_dmx)
register_module(pr_mdleditor)
register_module(pr_mysql)
register_module(pr_openvr)
register_module(pr_ovr)
register_module(pr_prosper_opengl)
register_module(pr_pcl)
register_module(pr_socket)
register_module(pr_sqlite)
register_module(pr_xml)
register_module(pr_video_recorder)
register_module(pr_steam_networking)
register_module(pr_gpl)
register_module(pr_cycles)
register_module(pr_uvatlas)
register_module(pr_mmd)

option(CONFIG_ENABLE_BULLET_PHYSICS "Enable Bullet physics engine" ON)
if(CONFIG_ENABLE_BULLET_PHYSICS)
	register_module(pr_bullet)
	set_target_properties(pr_bullet PROPERTIES FOLDER modules)
endif()

option(CONFIG_ENABLE_PHYSX_PHYSICS "Enable PhysX physics engine" ON)
if(CONFIG_ENABLE_PHYSX_PHYSICS)
	register_module(pr_physx)
	set_target_properties(pr_physx PROPERTIES FOLDER modules)
endif()

set_target_properties(pr_steamworks PROPERTIES FOLDER modules)
set_target_properties(pr_chromium PROPERTIES FOLDER modules)
set_target_properties(pr_curl PROPERTIES FOLDER modules)
set_target_properties(pr_dmx PROPERTIES FOLDER modules)
set_target_properties(pr_mdleditor PROPERTIES FOLDER modules)
set_target_properties(pr_mysql PROPERTIES FOLDER modules)
set_target_properties(pr_openvr PROPERTIES FOLDER modules)
set_target_properties(pr_ovr PROPERTIES FOLDER modules)
set_target_properties(pr_prosper_opengl PROPERTIES FOLDER modules)
set_target_properties(pr_pcl PROPERTIES FOLDER modules)
set_target_properties(pr_socket PROPERTIES FOLDER modules)
set_target_properties(pr_sqlite PROPERTIES FOLDER modules)
set_target_properties(pr_xml PROPERTIES FOLDER modules)
set_target_properties(pr_video_recorder PROPERTIES FOLDER modules)
set_target_properties(pr_game_networking_server PROPERTIES FOLDER modules)
set_target_properties(pr_game_networking_client PROPERTIES FOLDER modules)
set_target_properties(pr_steam_networking_server PROPERTIES FOLDER modules)
set_target_properties(pr_steam_networking_client PROPERTIES FOLDER modules)
set_target_properties(pr_gpl PROPERTIES FOLDER modules)
set_target_properties(pr_cycles PROPERTIES FOLDER modules)
set_target_properties(pr_uvatlas PROPERTIES FOLDER modules)
set_target_properties(pr_mmd PROPERTIES FOLDER modules)

set(CMAKE_CXX_STANDARD 17)
