include("../../CMakeShared.txt")

add_include_dir(server)
add_include_dir(libvorbis)
link_external_library(libogg)
link_external_library(recast)
link_external_library(detour)
link_external_library(util_pad)
link_external_library(util_versioned_archive)
link_external_library(libnoise)
link_external_library(libnoiseutils)
link_external_library(libzip)
link_external_library(clip2tri)
link_external_library(util_smdmodel)
link_external_library(util_source_script)
link_external_library(util_pragma_doc)
# link_external_library(assimp)
link_external_library(bzip2)
link_external_library(util_image)
link_external_library(util_zip)
link_external_library(7zpp)
link_external_library(muparserx)
link_external_library(wms_shared)
link_external_library(util_udm)
link_external_library(panima)
link_external_library(cppbezierfit)
link_external_library(spdlog)
link_external_library(fmt)
link_external_library(util_unicode)

add_external_library(luajit)
add_external_library(luabind)
add_external_library(clipper)
add_external_library(poly2tri)
add_external_library(libvorbisfile)
add_external_library(lz4)
if(WIN32)
	add_external_library(lua)
endif()

add_include_dir(libogg_build)
add_include_dir(pr_steamworks)
add_include_dir(eigen)
add_include_dir(miniball)
add_include_dir(bvh)
add_include_dir(client)
# add_include_dir(exprtk)

add_def(DLLNETWORK_EX)
add_def(ENGINE_NETWORK)
add_def(UIMG_ENABLE_NVTT)

set(PRECOMPILED_HEADER "stdafx_shared")

if(WIN32)
	add_compile_options(/bigobj)
endif()

if(${CONFIG_BUILD_WITH_VTUNE_SUPPORT})
	link_external_library(vtune_profiler)
endif()

def_project(shared lib)

# Required for networking library
link_boost_library(shared DEPENDENCY_BOOST_DATE_TIME_LIBRARY date_time)
link_boost_library(shared DEPENDENCY_BOOST_REGEX_LIBRARY regex)
link_boost_library(shared DEPENDENCY_BOOST_THREAD_LIBRARY thread)
link_boost_library(shared DEPENDENCY_BOOST_CHRONO_LIBRARY chrono)

if(UNIX)
	target_link_libraries(shared util)
endif()
