include(${CMAKE_SOURCE_DIR}/cmake/pr_common.cmake)

option(CONFIG_BUILD_WITH_VTUNE_SUPPORT "Build with VTune profiler support?" OFF)

set(PROJ_NAME shared)
pr_add_library(${PROJ_NAME} SHARED)
pr_add_export_macro(${PROJ_NAME} DLLNETWORK)

if (WIN32 AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
	# This is a temporary workaround for a compiler bug with clang on Windows.
	# See https://github.com/llvm/llvm-project/issues/173997
	# Once the issue is fixed, all instances of WINDOWS_CLANG_COMPILER_FIX should be removed.
	# WINDOWS_CLANG_COMPILER_FIX
	target_compile_definitions(${PROJ_NAME} PUBLIC
		"PREFIX_WARNING=GET_PREFIX_WARNING()"
		"PREFIX_ERROR=GET_PREFIX_ERROR()"
		"PREFIX_CRITICAL=GET_PREFIX_CRITICAL()"
		"PREFIX_SERVER=GET_PREFIX_SERVER()"
		"PREFIX_CLIENT=GET_PREFIX_CLIENT()"
		"PREFIX_LUA=GET_PREFIX_LUA()"
		"PREFIX_GUI=GET_PREFIX_GUI()"

		"COLOR_WARNING=GET_COLOR_WARNING()"
		"COLOR_ERROR=GET_COLOR_ERROR()"
		"COLOR_CRITICAL=GET_COLOR_CRITICAL()"
		"COLOR_SERVER=GET_COLOR_SERVER()"
		"COLOR_CLIENT=GET_COLOR_CLIENT()"
		"COLOR_LUA=GET_COLOR_LUA()"
		"COLOR_GUI=GET_COLOR_GUI()"
		"COLOR_RESET=GET_COLOR_RESET()"

		"ACTIVITY_NAMES=GET_ACTIVITY_NAMES()"

		"DEFAULT_NEAR_Z=GET_DEFAULT_NEAR_Z()"
		"DEFAULT_FAR_Z=GET_DEFAULT_FAR_Z()"
		"DEFAULT_FOV=GET_DEFAULT_FOV()"
		"DEFAULT_VIEWMODEL_FOV=GET_DEFAULT_VIEWMODEL_FOV()"
		"DEFAULT_FOCAL_DISTANCE=GET_DEFAULT_FOCAL_DISTANCE()"
		"DEFAULT_TRACER_COLOR=GET_DEFAULT_TRACER_COLOR()"
		"DEFAULT_PORT_TCP=GET_DEFAULT_PORT_TCP()"
		"DEFAULT_PORT_UDP=GET_DEFAULT_PORT_UDP()"
		"BIND_KEYS=GET_BIND_KEYS()"
		"IMPORT_PATH=GET_IMPORT_PATH()"
		"CONVERT_PATH=GET_CONVERT_PATH()"

		"COUT=GET_COUT()"
		"CWAR=GET_CWAR()"
		"CERR=GET_CERR()"
		"CRIT=GET_CRIT()"
		"CSV=GET_CSV()"
		"CCL=GET_CCL()"

		"RESOURCEINFO_RESPONSE=GET_RESOURCEINFO_RESPONSE()"
		"RESOURCE_REQUEST=GET_RESOURCE_REQUEST()"
		"RESOURCE_BEGIN=GET_RESOURCE_BEGIN()"
		"QUERY_RESOURCE=GET_QUERY_RESOURCE()"
		"QUERY_MODEL_TEXTURE=GET_QUERY_MODEL_TEXTURE()"
		"DISCONNECT=GET_DISCONNECT()"
		"USERINPUT=GET_USERINPUT()"
		"CLIENTINFO=GET_CLIENTINFO()"
		"GAME_READY=GET_GAME_READY()"
		"CMD_CALL=GET_CMD_CALL()"
		"RCON=GET_RCON()"
		"SERVERINFO_REQUEST=GET_SERVERINFO_REQUEST()"
		"AUTHENTICATE=GET_AUTHENTICATE()"
		"LUANET=GET_LUANET()"
		"CMD_SETPOS=GET_CMD_SETPOS()"
		"CVAR_SET=GET_CVAR_SET()"
		"NOCLIP=GET_NOCLIP()"
		"NOTARGET=GET_NOTARGET()"
		"GODMODE=GET_GODMODE()"
		"SUICIDE=GET_SUICIDE()"
		"HURTME=GET_HURTME()"
		"WEAPON_NEXT=GET_WEAPON_NEXT()"
		"WEAPON_PREVIOUS=GET_WEAPON_PREVIOUS()"
		"ENT_EVENT=GET_ENT_EVENT()"
		"GIVE_WEAPON=GET_GIVE_WEAPON()"
		"STRIP_WEAPONS=GET_STRIP_WEAPONS()"
		"GIVE_AMMO=GET_GIVE_AMMO()"
		"DEBUG_AI_NAVIGATION=GET_DEBUG_AI_NAVIGATION()"
		"DEBUG_AI_SCHEDULE_PRINT=GET_DEBUG_AI_SCHEDULE_PRINT()"
		"DEBUG_AI_SCHEDULE_TREE=GET_DEBUG_AI_SCHEDULE_TREE()"
		"CL_SEND=GET_CL_SEND()"
		"RESOURCEINFO=GET_RESOURCEINFO()"
		"RESOURCECOMPLETE=GET_RESOURCECOMPLETE()"
		"RESOURCE_FRAGMENT=GET_RESOURCE_FRAGMENT()"
		"RESOURCE_MDL_ROUGH=GET_RESOURCE_MDL_ROUGH()"
		"SERVERINFO=GET_SERVERINFO()"
		"START_RESOURCE_TRANSFER=GET_START_RESOURCE_TRANSFER()"
		"SND_EV=GET_SND_EV()"
		"SND_CREATE=GET_SND_CREATE()"
		"SND_PRECACHE=GET_SND_PRECACHE()"
		"LUANET=GET_LUANET()"
		"LUANET_REG=GET_LUANET_REG()"
		"REGISTER_NET_EVENT=GET_REGISTER_NET_EVENT()"
		"ENT_CREATE=GET_ENT_CREATE()"
		"ENT_REMOVE=GET_ENT_REMOVE()"
		"ENT_SOUND=GET_ENT_SOUND()"
		"ENT_MODEL=GET_ENT_MODEL()"
		"ENT_SKIN=GET_ENT_SKIN()"
		"PL_LOCAL=GET_PL_LOCAL()"
		"GAME_START=GET_GAME_START()"
		"MAP_READY=GET_MAP_READY()"
		"MAP_LOAD=GET_MAP_LOAD()"
		"ENT_CREATE_LUA=GET_ENT_CREATE_LUA()"
		"ENT_ANIM_PLAY=GET_ENT_ANIM_PLAY()"
		"ENT_MOVETYPE=GET_ENT_MOVETYPE()"
		"ENT_COLLISIONTYPE=GET_ENT_COLLISIONTYPE()"
		"ENT_EYEOFFSET=GET_ENT_EYEOFFSET()"
		"ENT_SETUNLIT=GET_ENT_SETUNLIT()"
		"ENT_SETCASTSHADOWS=GET_ENT_SETCASTSHADOWS()"
		"ENT_SETHEALTH=GET_ENT_SETHEALTH()"
		"ENT_SETNAME=GET_ENT_SETNAME()"
		"ENT_SETPARENT=GET_ENT_SETPARENT()"
		"ENT_SETPARENTMODE=GET_ENT_SETPARENTMODE()"
		"ENT_PHYS_INIT=GET_ENT_PHYS_INIT()"
		"ENT_PHYS_DESTROY=GET_ENT_PHYS_DESTROY()"
		"ENT_EVENT=GET_ENT_EVENT()"
		"ENT_TOGGLE=GET_ENT_TOGGLE()"
		"ENT_SETCOLLISIONFILTER=GET_ENT_SETCOLLISIONFILTER()"
		"ENT_ANIM_GESTURE_PLAY=GET_ENT_ANIM_GESTURE_PLAY()"
		"ENT_ANIM_GESTURE_STOP=GET_ENT_ANIM_GESTURE_STOP()"
		"ENT_SETKINEMATIC=GET_ENT_SETKINEMATIC()"
		"GAME_TIMESCALE=GET_GAME_TIMESCALE()"
		"FIRE_BULLET=GET_FIRE_BULLET()"
		"CREATE_GIBLET=GET_CREATE_GIBLET()"
		"REGISTER_ENTITY_COMPONENT=GET_REGISTER_ENTITY_COMPONENT()"
		"PL_TOGGLE_NOCLIP=GET_PL_TOGGLE_NOCLIP()"
		"GAMEINFO=GET_GAMEINFO()"
		"GAME_READY=GET_GAME_READY()"
		"SNAPSHOT=GET_SNAPSHOT()"
		"CVAR_SET=GET_CVAR_SET()"
		"LUACMD_REG=GET_LUACMD_REG()"
		"PLAYERINPUT=GET_PLAYERINPUT()"
		"PL_SPEED_WALK=GET_PL_SPEED_WALK()"
		"PL_SPEED_RUN=GET_PL_SPEED_RUN()"
		"PL_SPEED_SPRINT=GET_PL_SPEED_SPRINT()"
		"PL_SPEED_CROUCH_WALK=GET_PL_SPEED_CROUCH_WALK()"
		"PL_HEIGHT_STAND=GET_PL_HEIGHT_STAND()"
		"PL_HEIGHT_CROUCH=GET_PL_HEIGHT_CROUCH()"
		"PL_EYELEVEL_STAND=GET_PL_EYELEVEL_STAND()"
		"PL_EYELEVEL_CROUCH=GET_PL_EYELEVEL_CROUCH()"
		"PL_SLOPELIMIT=GET_PL_SLOPELIMIT()"
		"PL_STEPOFFSET=GET_PL_STEPOFFSET()"
		"PL_UPDIRECTION=GET_PL_UPDIRECTION()"
		"PL_CHANGEDNAME=GET_PL_CHANGEDNAME()"
		"WEP_DEPLOY=GET_WEP_DEPLOY()"
		"WEP_HOLSTER=GET_WEP_HOLSTER()"
		"WEP_PRIMARYATTACK=GET_WEP_PRIMARYATTACK()"
		"WEP_SECONDARYATTACK=GET_WEP_SECONDARYATTACK()"
		"WEP_ATTACK3=GET_WEP_ATTACK3()"
		"WEP_ATTACK4=GET_WEP_ATTACK4()"
		"WEP_RELOAD=GET_WEP_RELOAD()"
		"WEP_PRIM_CLIP_SIZE=GET_WEP_PRIM_CLIP_SIZE()"
		"WEP_SEC_CLIP_SIZE=GET_WEP_SEC_CLIP_SIZE()"
		"WEP_PRIM_MAX_CLIP_SIZE=GET_WEP_PRIM_MAX_CLIP_SIZE()"
		"WEP_SEC_MAX_CLIP_SIZE=GET_WEP_SEC_MAX_CLIP_SIZE()"
		"WEP_PRIM_AMMO_TYPE=GET_WEP_PRIM_AMMO_TYPE()"
		"WEP_SEC_AMMO_TYPE=GET_WEP_SEC_AMMO_TYPE()"
		"ENV_LIGHT_SPOT_OUTERCUTOFF_ANGLE=GET_ENV_LIGHT_SPOT_OUTERCUTOFF_ANGLE()"
		"ENV_LIGHT_SPOT_INNERCUTOFF_ANGLE=GET_ENV_LIGHT_SPOT_INNERCUTOFF_ANGLE()"
		"ENVLIGHT_SETSTATE=GET_ENVLIGHT_SETSTATE()"
		"ENVEXPLOSION_EXPLODE=GET_ENVEXPLOSION_EXPLODE()"
		"SV_SEND=GET_SV_SEND()"
		"ENV_FOGCON_SETSTARTDIST=GET_ENV_FOGCON_SETSTARTDIST()"
		"ENV_FOGCON_SETENDDIST=GET_ENV_FOGCON_SETENDDIST()"
		"ENV_FOGCON_SETMAXDENSITY=GET_ENV_FOGCON_SETMAXDENSITY()"
		"ENV_PRTSYS_SETCONTINUOUS=GET_ENV_PRTSYS_SETCONTINUOUS()"
		"CLIENT_DROPPED=GET_CLIENT_DROPPED()"
		"CLIENT_READY=GET_CLIENT_READY()"
		"CLIENT_JOINED=GET_CLIENT_JOINED()"
		"CREATE_EXPLOSION=GET_CREATE_EXPLOSION()"
		"DEBUG_AI_NAVIGATION=GET_DEBUG_AI_NAVIGATION()"
		"DEBUG_AI_SCHEDULE_PRINT=GET_DEBUG_AI_SCHEDULE_PRINT()"
		"DEBUG_AI_SCHEDULE_TREE=GET_DEBUG_AI_SCHEDULE_TREE()"
		"CMD_CALL_RESPONSE=GET_CMD_CALL_RESPONSE()"
		"ENT_TRIGGER_GRAVITY_ONSTARTTOUCH=GET_ENT_TRIGGER_GRAVITY_ONSTARTTOUCH()"
		"ADD_SHARED_COMPONENT=GET_ADD_SHARED_COMPONENT()"
		"DEBUG_DRAWPOINT=GET_DEBUG_DRAWPOINT()"
		"DEBUG_DRAWLINE=GET_DEBUG_DRAWLINE()"
		"DEBUG_DRAWBOX=GET_DEBUG_DRAWBOX()"
		"DEBUG_DRAWTEXT=GET_DEBUG_DRAWTEXT()"
		"DEBUG_DRAWSPHERE=GET_DEBUG_DRAWSPHERE()"
		"DEBUG_DRAWCONE=GET_DEBUG_DRAWCONE()"
		"DEBUG_DRAWAXIS=GET_DEBUG_DRAWAXIS()"
		"DEBUG_DRAWPATH=GET_DEBUG_DRAWPATH()"
		"DEBUG_DRAWSPLINE=GET_DEBUG_DRAWSPLINE()"
		"DEBUG_DRAWPLANE=GET_DEBUG_DRAWPLANE()"
		"DEBUG_DRAW_MESH=GET_DEBUG_DRAW_MESH()"
		"DEBUG_DRAWTRUNCATEDCONE=GET_DEBUG_DRAWTRUNCATEDCONE()"
		"DEBUG_DRAWCYLINDER=GET_DEBUG_DRAWCYLINDER()"

		"EVENT_ON_SPAWN=GET_EVENT_ON_SPAWN()"
		"EVENT_ON_POST_SPAWN=GET_EVENT_ON_POST_SPAWN()"
		"EVENT_ON_ACTION_INPUT_CHANGED=GET_EVENT_ON_ACTION_INPUT_CHANGED()"
		"EVENT_ON_ENTITY_COMPONENT_ADDED=GET_EVENT_ON_ENTITY_COMPONENT_ADDED()"
		"EVENT_ON_ENTITY_COMPONENT_REMOVED=GET_EVENT_ON_ENTITY_COMPONENT_REMOVED()"
		"EVENT_ON_MEMBERS_CHANGED=GET_EVENT_ON_MEMBERS_CHANGED()"
		"EVENT_ON_ACTIVE_STATE_CHANGED=GET_EVENT_ON_ACTIVE_STATE_CHANGED()"
		"EVENT_HANDLE_ANIMATION_EVENT=GET_EVENT_HANDLE_ANIMATION_EVENT()"
		"EVENT_ON_PLAY_ANIMATION=GET_EVENT_ON_PLAY_ANIMATION()"
		"EVENT_ON_PLAY_LAYERED_ANIMATION=GET_EVENT_ON_PLAY_LAYERED_ANIMATION()"
		"EVENT_ON_PLAY_LAYERED_ACTIVITY=GET_EVENT_ON_PLAY_LAYERED_ACTIVITY()"
		"EVENT_ON_ANIMATION_COMPLETE=GET_EVENT_ON_ANIMATION_COMPLETE()"
		"EVENT_ON_LAYERED_ANIMATION_START=GET_EVENT_ON_LAYERED_ANIMATION_START()"
		"EVENT_ON_LAYERED_ANIMATION_COMPLETE=GET_EVENT_ON_LAYERED_ANIMATION_COMPLETE()"
		"EVENT_ON_ANIMATION_START=GET_EVENT_ON_ANIMATION_START()"
		"EVENT_TRANSLATE_LAYERED_ANIMATION=GET_EVENT_TRANSLATE_LAYERED_ANIMATION()"
		"EVENT_TRANSLATE_ANIMATION=GET_EVENT_TRANSLATE_ANIMATION()"
		"EVENT_TRANSLATE_ACTIVITY=GET_EVENT_TRANSLATE_ACTIVITY()"
		"EVENT_MAINTAIN_ANIMATIONS=GET_EVENT_MAINTAIN_ANIMATIONS()"
		"EVENT_MAINTAIN_ANIMATION_MT=GET_EVENT_MAINTAIN_ANIMATION_MT()"
		"EVENT_SHOULD_UPDATE_BONES=GET_EVENT_SHOULD_UPDATE_BONES()"
		"EVENT_ON_PLAY_ACTIVITY=GET_EVENT_ON_PLAY_ACTIVITY()"
		"EVENT_ON_STOP_LAYERED_ANIMATION=GET_EVENT_ON_STOP_LAYERED_ANIMATION()"
		"EVENT_ON_BONE_TRANSFORM_CHANGED=GET_EVENT_ON_BONE_TRANSFORM_CHANGED()"
		"EVENT_ON_ANIMATIONS_UPDATED_MT=GET_EVENT_ON_ANIMATIONS_UPDATED_MT()"
		"EVENT_UPDATE_BONE_POSES_MT=GET_EVENT_UPDATE_BONE_POSES_MT()"
		"EVENT_ON_BONE_POSES_FINALIZED_MT=GET_EVENT_ON_BONE_POSES_FINALIZED_MT()"
		"EVENT_ON_BLEND_ANIMATION_MT=GET_EVENT_ON_BLEND_ANIMATION_MT()"
		"EVENT_PLAY_ANIMATION=GET_EVENT_PLAY_ANIMATION()"
		"EVENT_ON_ANIMATION_RESET=GET_EVENT_ON_ANIMATION_RESET()"
		"EVENT_ON_ANIMATIONS_UPDATED=GET_EVENT_ON_ANIMATIONS_UPDATED()"
		"EVENT_ON_UPDATE_SKELETON=GET_EVENT_ON_UPDATE_SKELETON()"
		"EVENT_POST_ANIMATION_UPDATE=GET_EVENT_POST_ANIMATION_UPDATE()"
		"EVENT_ON_RESET_POSE=GET_EVENT_ON_RESET_POSE()"
		"EVENT_ON_ATTACHMENT_UPDATE=GET_EVENT_ON_ATTACHMENT_UPDATE()"
		"EVENT_ON_CLEAR_BVH=GET_EVENT_ON_CLEAR_BVH()"
		"EVENT_ON_BVH_UPDATE_REQUESTED=GET_EVENT_ON_BVH_UPDATE_REQUESTED()"
		"EVENT_ON_BVH_REBUILT=GET_EVENT_ON_BVH_REBUILT()"
		"EVENT_ON_FOOT_STEP=GET_EVENT_ON_FOOT_STEP()"
		"EVENT_ON_CHARACTER_ORIENTATION_CHANGED=GET_EVENT_ON_CHARACTER_ORIENTATION_CHANGED()"
		"EVENT_ON_DEPLOY_WEAPON=GET_EVENT_ON_DEPLOY_WEAPON()"
		"EVENT_ON_SET_ACTIVE_WEAPON=GET_EVENT_ON_SET_ACTIVE_WEAPON()"
		"EVENT_PLAY_FOOTSTEP_SOUND=GET_EVENT_PLAY_FOOTSTEP_SOUND()"
		"EVENT_IS_MOVING=GET_EVENT_IS_MOVING()"
		"EVENT_ON_JUMP=GET_EVENT_ON_JUMP()"
		"EVENT_ON_PARENT_CHANGED=GET_EVENT_ON_PARENT_CHANGED()"
		"EVENT_ON_COLOR_CHANGED=GET_EVENT_ON_COLOR_CHANGED()"
		"EVENT_ON_FIELD_ANGLE_CHANGED=GET_EVENT_ON_FIELD_ANGLE_CHANGED()"
		"EVENT_ON_IGNITED=GET_EVENT_ON_IGNITED()"
		"EVENT_ON_EXTINGUISHED=GET_EVENT_ON_EXTINGUISHED()"
		"EVENT_ON_FLEX_CONTROLLER_CHANGED=GET_EVENT_ON_FLEX_CONTROLLER_CHANGED()"
		"EVENT_ON_PLAYER_DEATH=GET_EVENT_ON_PLAYER_DEATH()"
		"EVENT_ON_PLAYER_SPAWNED=GET_EVENT_ON_PLAYER_SPAWNED()"
		"EVENT_ON_PLAYER_DROPPED=GET_EVENT_ON_PLAYER_DROPPED()"
		"EVENT_ON_PLAYER_READY=GET_EVENT_ON_PLAYER_READY()"
		"EVENT_ON_PLAYER_JOINED=GET_EVENT_ON_PLAYER_JOINED()"
		"EVENT_ON_GAME_INITIALIZED=GET_EVENT_ON_GAME_INITIALIZED()"
		"EVENT_ON_MAP_INITIALIZED=GET_EVENT_ON_MAP_INITIALIZED()"
		"EVENT_ON_GAME_READY=GET_EVENT_ON_GAME_READY()"
		"EVENT_ON_HEALTH_CHANGED=GET_EVENT_ON_HEALTH_CHANGED()"
		"EVENT_ON_MODEL_MATERIALS_LOADED=GET_EVENT_ON_MODEL_MATERIALS_LOADED()"
		"EVENT_ON_SKIN_CHANGED=GET_EVENT_ON_SKIN_CHANGED()"
		"EVENT_ON_BODY_GROUP_CHANGED=GET_EVENT_ON_BODY_GROUP_CHANGED()"
		"EVENT_ON_NAME_CHANGED=GET_EVENT_ON_NAME_CHANGED()"
		"EVENT_ON_OBSERVER_CHANGED=GET_EVENT_ON_OBSERVER_CHANGED()"
		"EVENT_ON_OBSERVATION_MODE_CHANGED=GET_EVENT_ON_OBSERVATION_MODE_CHANGED()"
		"EVENT_ON_OWNER_CHANGED=GET_EVENT_ON_OWNER_CHANGED()"
		"EVENT_ON_PHYSICS_INITIALIZED=GET_EVENT_ON_PHYSICS_INITIALIZED()"
		"EVENT_ON_PHYSICS_DESTROYED=GET_EVENT_ON_PHYSICS_DESTROYED()"
		"EVENT_ON_PHYSICS_UPDATED=GET_EVENT_ON_PHYSICS_UPDATED()"
		"EVENT_ON_DYNAMIC_PHYSICS_UPDATED=GET_EVENT_ON_DYNAMIC_PHYSICS_UPDATED()"
		"EVENT_ON_POST_PHYSICS_SIMULATE=GET_EVENT_ON_POST_PHYSICS_SIMULATE()"
		"EVENT_ON_SLEEP=GET_EVENT_ON_SLEEP()"
		"EVENT_ON_WAKE=GET_EVENT_ON_WAKE()"
		"EVENT_HANDLE_RAYCAST=GET_EVENT_HANDLE_RAYCAST()"
		"EVENT_INITIALIZE_PHYSICS=GET_EVENT_INITIALIZE_PHYSICS()"
		"EVENT_ON_RADIUS_CHANGED=GET_EVENT_ON_RADIUS_CHANGED()"
		"EVENT_ON_SOUND_CREATED=GET_EVENT_ON_SOUND_CREATED()"
		"EVENT_ON_ACTIVATION_STATE_CHANGED=GET_EVENT_ON_ACTIVATION_STATE_CHANGED()"
		"EVENT_ON_STATIC_BVH_COMPONENT_CHANGED=GET_EVENT_ON_STATIC_BVH_COMPONENT_CHANGED()"
		"EVENT_ON_TURN_ON=GET_EVENT_ON_TURN_ON()"
		"EVENT_ON_TURN_OFF=GET_EVENT_ON_TURN_OFF()"
		"EVENT_ON_POSE_CHANGED=GET_EVENT_ON_POSE_CHANGED()"
		"EVENT_ON_TELEPORT=GET_EVENT_ON_TELEPORT()"
		"EVENT_ON_DRIVER_ENTERED=GET_EVENT_ON_DRIVER_ENTERED()"
		"EVENT_ON_DRIVER_EXITED=GET_EVENT_ON_DRIVER_EXITED()"
		"EVENT_ON_DEPLOY=GET_EVENT_ON_DEPLOY()"
		"EVENT_ON_HOLSTER=GET_EVENT_ON_HOLSTER()"
		"EVENT_ON_PRIMARY_ATTACK=GET_EVENT_ON_PRIMARY_ATTACK()"
		"EVENT_ON_SECONDARY_ATTACK=GET_EVENT_ON_SECONDARY_ATTACK()"
		"EVENT_ON_TERTIARY_ATTACK=GET_EVENT_ON_TERTIARY_ATTACK()"
		"EVENT_ON_ATTACK4=GET_EVENT_ON_ATTACK4()"
		"EVENT_ON_END_PRIMARY_ATTACK=GET_EVENT_ON_END_PRIMARY_ATTACK()"
		"EVENT_ON_END_SECONDARY_ATTACK=GET_EVENT_ON_END_SECONDARY_ATTACK()"
		"EVENT_ON_RELOAD=GET_EVENT_ON_RELOAD()"
		"EVENT_ON_PRIMARY_CLIP_SIZE_CHANGED=GET_EVENT_ON_PRIMARY_CLIP_SIZE_CHANGED()"
		"EVENT_ON_SECONDARY_CLIP_SIZE_CHANGED=GET_EVENT_ON_SECONDARY_CLIP_SIZE_CHANGED()"
		"EVENT_ON_TARGET_CHANGED=GET_EVENT_ON_TARGET_CHANGED()"
		"EVENT_ON_ENTITY_ADDED=GET_EVENT_ON_ENTITY_ADDED()"
		"EVENT_ON_ENTITY_REMOVED=GET_EVENT_ON_ENTITY_REMOVED()"
		"EVENT_ON_TICK=GET_EVENT_ON_TICK()"
		"EVENT_ON_UPDATE_MOVEMENT=GET_EVENT_ON_UPDATE_MOVEMENT()"
		"EVENT_ON_ORIGIN_CHANGED=GET_EVENT_ON_ORIGIN_CHANGED()"
		"EVENT_INITIALIZE_CHANNEL_VALUE_SUBMITTER=GET_EVENT_INITIALIZE_CHANNEL_VALUE_SUBMITTER()"
		"EVENT_ON_CHILD_ADDED=GET_EVENT_ON_CHILD_ADDED()"
		"EVENT_ON_CHILD_REMOVED=GET_EVENT_ON_CHILD_REMOVED()"
		"EVENT_ON_FIRE_BULLETS=GET_EVENT_ON_FIRE_BULLETS()"
		"EVENT_ON_BULLETS_FIRED=GET_EVENT_ON_BULLETS_FIRED()"
		"EVENT_ON_WATER_SUBMERGED=GET_EVENT_ON_WATER_SUBMERGED()"
		"EVENT_ON_WATER_EMERGED=GET_EVENT_ON_WATER_EMERGED()"
		"EVENT_ON_WATER_ENTERED=GET_EVENT_ON_WATER_ENTERED()"
		"EVENT_ON_WATER_EXITED=GET_EVENT_ON_WATER_EXITED()"
		"EVENT_ON_USE=GET_EVENT_ON_USE()"
		"EVENT_APPLY_CONSTRAINT=GET_EVENT_APPLY_CONSTRAINT()"
		"EVENT_ON_DRIVER_CHANGED=GET_EVENT_ON_DRIVER_CHANGED()"
		"EVENT_ON_DRIVEN_OBJECT_CHANGED=GET_EVENT_ON_DRIVEN_OBJECT_CHANGED()"
		"EVENT_ON_ORDER_INDEX_CHANGED=GET_EVENT_ON_ORDER_INDEX_CHANGED()"
		"EVENT_ON_PARTICIPANTS_FLAGGED_DIRTY=GET_EVENT_ON_PARTICIPANTS_FLAGGED_DIRTY()"
		"EVENT_ON_SPLASH=GET_EVENT_ON_SPLASH()"
		"EVENT_ON_PROPERTIES_CHANGED=GET_EVENT_ON_PROPERTIES_CHANGED()"
		"EVENT_CAN_TRIGGER=GET_EVENT_CAN_TRIGGER()"
		"EVENT_ON_START_TOUCH=GET_EVENT_ON_START_TOUCH()"
		"EVENT_ON_END_TOUCH=GET_EVENT_ON_END_TOUCH()"
		"EVENT_ON_TRIGGER=GET_EVENT_ON_TRIGGER()"
		"EVENT_ON_TRIGGER_INITIALIZED=GET_EVENT_ON_TRIGGER_INITIALIZED()"
		"EVENT_CALC_LIGHT_DIRECTION_TO_POINT=GET_EVENT_CALC_LIGHT_DIRECTION_TO_POINT()"
		"EVENT_CALC_LIGHT_INTENSITY_AT_POINT=GET_EVENT_CALC_LIGHT_INTENSITY_AT_POINT()"
		"EVENT_HANDLE_KEY_VALUE=GET_EVENT_HANDLE_KEY_VALUE()"
		"EVENT_ON_REMOVE=GET_EVENT_ON_REMOVE()"
		"EVENT_HANDLE_ACTION_INPUT=GET_EVENT_HANDLE_ACTION_INPUT()"
		"EVENT_MAINTAIN_ANIMATION_MOVEMENT=GET_EVENT_MAINTAIN_ANIMATION_MOVEMENT()"
		"EVENT_HANDLE_VIEW_ROTATION=GET_EVENT_HANDLE_VIEW_ROTATION()"
		"EVENT_ON_TAKEN_DAMAGE=GET_EVENT_ON_TAKEN_DAMAGE()"
		"EVENT_HANDLE_INPUT=GET_EVENT_HANDLE_INPUT()"
		"EVENT_ON_MODEL_CHANGED=GET_EVENT_ON_MODEL_CHANGED()"
		"EVENT_ON_PRE_PHYSICS_SIMULATE=GET_EVENT_ON_PRE_PHYSICS_SIMULATE()"
		"EVENT_ON_SCORE_CHANGED=GET_EVENT_ON_SCORE_CHANGED()"
		"EVENT_ON_TAKE_DAMAGE=GET_EVENT_ON_TAKE_DAMAGE()"
		"EVENT_CAN_USE=GET_EVENT_CAN_USE()"
		"EVENT_ON_WATER_SURFACE_SIMULATOR_CHANGED=GET_EVENT_ON_WATER_SURFACE_SIMULATOR_CHANGED()"
		"EVENT_ON_KILLED=GET_EVENT_ON_KILLED()"
		"EVENT_ON_RESPAWN=GET_EVENT_ON_RESPAWN()"
		"EVENT_ON_DEATH=GET_EVENT_ON_DEATH()"
		"EVENT_ON_SURFACE_PLANE_CHANGED=GET_EVENT_ON_SURFACE_PLANE_CHANGED()"
		"EVENT_ON_SURFACE_MESH_CHANGED=GET_EVENT_ON_SURFACE_MESH_CHANGED()"
	)
endif()

pr_add_dependency(${PROJ_NAME} panima TARGET PUBLIC)
pr_add_dependency(${PROJ_NAME} materialsystem TARGET PUBLIC)
pr_add_dependency(${PROJ_NAME} luasystem TARGET PUBLIC)
pr_add_dependency(${PROJ_NAME} util_pad TARGET)
pr_add_dependency(${PROJ_NAME} util_sound TARGET)
pr_add_dependency(${PROJ_NAME} wms_shared TARGET PUBLIC)
pr_add_dependency(${PROJ_NAME} util_zip TARGET)
pr_add_dependency(${PROJ_NAME} networkmanager TARGET)
pr_add_dependency(${PROJ_NAME} util_source_script TARGET)
pr_add_dependency(${PROJ_NAME} util_smdmodel TARGET)
pr_add_dependency(${PROJ_NAME} util_pragma_doc TARGET)
pr_add_dependency(${PROJ_NAME} util_unicode TARGET PUBLIC)
pr_add_dependency(${PROJ_NAME} oskit TARGET PRIVATE)

pr_add_dependency(${PROJ_NAME} Recast TARGET)
pr_add_dependency(${PROJ_NAME} Detour TARGET)
pr_add_dependency(${PROJ_NAME} clip2tri-static TARGET)
pr_add_dependency(${PROJ_NAME} poly2tri-static TARGET)
pr_add_dependency(${PROJ_NAME} clipper-static TARGET)
pr_add_dependency(${PROJ_NAME} muparserx TARGET)

pr_add_third_party_dependency(${PROJ_NAME} bvh PUBLIC)
pr_add_third_party_dependency(${PROJ_NAME} eigen)
pr_add_third_party_dependency(${PROJ_NAME} miniball)

if(UNIX)
	pr_add_dependency(${PROJ_NAME} linenoise TARGET)
endif()

# Required by lnoise.cpp
pr_add_dependency(${PROJ_NAME} noise-static TARGET)
pr_add_dependency(${PROJ_NAME} noiseutils-static TARGET)
pr_add_compile_definitions(${PROJ_NAME} -DNOISE_STATIC)
pr_add_compile_definitions(
	${PROJ_NAME}
		-DPHYS_KEEP_SIMULATION_TRANSFORM=0
		-DENABLE_DEBUG_HISTORY=0
)
pr_add_compile_definitions(
	${PROJ_NAME}
		-DNETWORKED_VARS_ENABLED=0
		-DRESOURCE_WATCHER_VERBOSE=0

		PUBLIC
)

# Required by sound_ogg.cpp
pr_add_dependency(${PROJ_NAME} vorbis TARGET)
pr_add_dependency(${PROJ_NAME} vorbisfile TARGET)

if(WIN32)
    set(SOURCE_EXCLUSION_FILTER)
else()
    set(SOURCE_EXCLUSION_FILTER "src/debug/StackWalker/*")
endif()

pr_init_module(${PROJ_NAME} EXCLUDE "${SOURCE_EXCLUSION_FILTER}")
pr_add_headers(${PROJ_NAME} "include/" EXCLUDE "${SOURCE_EXCLUSION_FILTER}")

pr_add_compile_definitions(${PROJ_NAME} -DDLLNETWORK_EX -DENGINE_NETWORK)

if(${CONFIG_BUILD_WITH_VTUNE_SUPPORT})
	pr_add_external_dependency(${PROJ_NAME} vtune_profiler LIBRARY)
	pr_add_compile_definitions(${PROJ_NAME} -DPRAGMA_ENABLE_VTUNE_PROFILING PUBLIC)
endif()

pr_finalize(${PROJ_NAME})
